--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>The Simpsons Quotes</title>
+        <meta name="title" content="The Simpsons Quotes" />
+        <meta
+        name="description"
+        content="List your favorite Api quotes from The Simpsons - by Soaressluiss on GitHub"
+        />
+        <link rel="shortcut icon" href="./src/assets/icon.png" type="image/x-icon">
+        <meta name="theme-color" content="#00ADEF" />
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,6 +18,27 @@
             href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,600;9..40,700;9..40,800&family=Lato:wght@400;700&display=swap"
             rel="stylesheet"
         />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://the-simpsons-quotes-soaressluiss.vercel.app/" />
+        <meta property="og:title" content="The Simpsons Quotes" />
+        <meta
+            property="og:description"
+            content="List your favorite Api quotes from The Simpsons - by Soaressluiss on GitHub"
+        />
+        <meta property="og:image" content="https://the-simpsons-quotes-soaressluiss.vercel.app/" />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://the-simpsons-quotes-soaressluiss.vercel.app/" />
+        <meta property="twitter:title" content="The Simpsons Quotes" />
+        <meta
+            property="twitter:description"
+            content="List your favorite Api quotes from The Simpsons - by Soaressluiss on GitHub"
+        />
+        <meta property="twitter:image" content="https://the-simpsons-quotes-soaressluiss.vercel.app/" />
+
     </head>
     <body>
         <div id="root"></div>
