--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>The Simpsons Quotes</title>
         <meta name="title" content="The Simpsons Quotes" />
-        <meta
-        name="description"
-        content="List your favorite Api quotes from The Simpsons - by Soaressluiss on GitHub"
-        />
-        <link rel="shortcut icon" href="./src/assets/icon.png" type="image/x-icon">
-        <meta name="theme-color" content="#00ADEF" />
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,6 +12,12 @@
             href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,600;9..40,700;9..40,800&family=Lato:wght@400;700&display=swap"
             rel="stylesheet"
         />
+        <meta
+            name="description"
+            content="List your favorite Api quotes from The Simpsons - by Soaressluiss on GitHub"
+        />
+        <link rel="shortcut icon" href="./src/assets/icon.png" type="image/x-icon" />
+        <meta name="theme-color" content="#00ADEF" />
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
@@ -38,7 +38,6 @@
             content="List your favorite Api quotes from The Simpsons - by Soaressluiss on GitHub"
         />
         <meta property="twitter:image" content="https://the-simpsons-quotes-soaressluiss.vercel.app/" />
-
     </head>
     <body>
         <div id="root"></div>
